# cookiecutter-infra-do

./: README copy.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
infra-{{cookiecutter.project_slug}}/: .gitignore  Pulumi.yaml  README.md  Taskfile.yml  __main__.py  dns.tf  provider.tf  pyproject.toml  variables.tf  {{cookiecutter.project_slug}}.tf
infra-{{cookiecutter.project_slug}}/ansible/: playbook.yml  ssh.yml
infra-{{cookiecutter.project_slug}}/ansible/templates/: nginx-le.j2
