[project]
name = "infra- {{cookiecutter.domain_name}}"
version = "0.1.0"
description = "Pulumi-based IaaC for the  {{cookiecutter.domain_name}} website"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-command>=1.0.2",
    "pulumi-digitalocean>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
src = ["."]
target-version = "py311"
exclude = ["migrations"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "DJ", # flake8-django, for django project only!
    "B",  # flake8-bugbear
    # "ANN", # flake8-annotations
    "Q",   # flake8-quotes
    "PTH", # flake8-pathlib
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

